# scroll

./: CONTEXT.md  Cargo.toml  PROGRESS.md  README.md  quickguide.md
migrations/: 001_initial.sql
src/: app.rs  config.rs  main.rs  models.rs
src/ai/: chat.rs  client.rs  flashcards.rs  mod.rs  summarize.rs
src/engine/: markdown.rs  mod.rs  scraper.rs  sm2.rs
src/server/: clip.rs  mod.rs  routes.rs
src/storage/: articles.rs  db.rs  flashcards.rs  highlights.rs  mod.rs  search.rs  tags.rs
src/ui/: command_bar.rs  highlights.rs  library.rs  mod.rs  reader.rs  review.rs  status_bar.rs  theme.rs
